--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -175,11 +175,11 @@
     "shape = (80, 80)\n",
     "pixel_size = assembly_potential.voxel_size\n",
     "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.4)\n",
-    "scattering = cs.FourierSliceExtract(config)\n",
+    "integrator = cs.FourierSliceExtract(config)\n",
     "\n",
     "# ... instantiate the image formation models\n",
-    "simulated = cs.AssemblyPipeline(helix, scattering)\n",
-    "truth = cs.ImagePipeline(true_assembly, scattering)"
+    "simulated = cs.AssemblyPipeline(helix, integrator)\n",
+    "truth = cs.ImagePipeline(true_assembly, integrator)"
    ]
   },
   {
