--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we have to choose a scattering (or in this case, projection) method. This will depend on the scattering potential representation."
+    "Next we have to choose an integration method onto the exit plane. This will depend on the scattering potential representation."
    ]
   },
   {
@@ -107,7 +107,7 @@
     "shape = (64, 64)\n",
     "pixel_size = 4.4  # Angstroms\n",
     "config = cs.ImageConfig(shape, pixel_size, pad_scale=2)\n",
-    "scattering = cs.FourierSliceExtract(\n",
+    "integrator = cs.FourierSliceExtract(\n",
     "    config, interpolation_order=1, interpolation_mode=\"fill\"\n",
     ")"
    ]
@@ -169,16 +169,16 @@
    "source": [
     "# Image formation models\n",
     "scattering_pipeline = cs.ImagePipeline(\n",
-    "    scattering=scattering, specimen=specimen, solvent=solvent\n",
+    "    integrator=integrator, specimen=specimen, solvent=solvent\n",
     ")\n",
     "optics_pipeline = cs.ImagePipeline(\n",
-    "    scattering=scattering,\n",
+    "    integrator=integrator,\n",
     "    specimen=specimen,\n",
     "    instrument=instrument_with_optics,\n",
     "    solvent=solvent,\n",
     ")\n",
     "detector_pipeline = cs.ImagePipeline(\n",
-    "    scattering=scattering,\n",
+    "    integrator=integrator,\n",
     "    specimen=specimen,\n",
     "    instrument=instrument_with_optics_and_detector,\n",
     "    solvent=solvent,\n",
