--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -99,7 +99,7 @@
     "potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=1.3\n",
     ")\n",
-    "scattering = cs.FourierSliceExtract(config)\n",
+    "integrator = cs.FourierSliceExtract(config)\n",
     "\n",
     "# ... build the specimen\n",
     "specimen = cs.Specimen(potential, poses)\n",
@@ -136,9 +136,9 @@
     "\n",
     "\n",
     "@jax.jit\n",
-    "def compute_micrograph(specimen, scattering, instrument):\n",
+    "def compute_micrograph(specimen, integrator, instrument):\n",
     "    \"\"\"Build the model and compute the superposition.\"\"\"\n",
-    "    pipeline = cs.ImagePipeline(specimen, scattering, instrument)\n",
+    "    pipeline = cs.ImagePipeline(specimen, integrator, instrument)\n",
     "    is_vmap = lambda x: isinstance(x, cs.AbstractPose)\n",
     "    to_vmap = jax.tree_util.tree_map(is_vmap, pipeline, is_leaf=is_vmap)\n",
     "    vmap, novmap = eqx.partition(pipeline, to_vmap)\n",
@@ -153,7 +153,7 @@
    "source": [
     "# Compute the image and plot\n",
     "fig, ax = plt.subplots()\n",
-    "micrograph = compute_micrograph(specimen, scattering, instrument)\n",
+    "micrograph = compute_micrograph(specimen, integrator, instrument)\n",
     "plot_image(micrograph, fig, ax, label=\"Sum of random poses\")"
    ]
   }
