the integrator should just take in the potential... otherwise it is a bit confusing

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -206,11 +206,12 @@
     "# Now, create an instrument\n",
     "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
-    "detector = cs.GaussianDetector(electrons_per_angstrom_squared=op.Constant(40.0))\n",
-    "instrument = cs.Instrument(optics, detector)\n",
+    "dose = cs.ElectronDose(electrons_per_angstrom_squared=100.0)\n",
+    "detector = cs.GaussianDetector(dqe=cs.IdealDQE(fraction_detected_electrons=1.0))\n",
+    "instrument = cs.Instrument(optics, dose, detector)\n",
     "# ... and their respective pipelines\n",
-    "simulated = cs.AssemblyPipeline(helix, scattering, instrument)\n",
-    "truth = cs.ImagePipeline(true_assembly, scattering, instrument)"
+    "simulated = cs.AssemblyPipeline(helix, integrator, instrument)\n",
+    "truth = cs.ImagePipeline(true_assembly, integrator, instrument)"
    ]
   },
   {
