--- a/tutorials/simulate-micrograph.ipynb
+++ b/tutorials/simulate-micrograph.ipynb
@@ -105,8 +105,8 @@
     "specimen = cs.Specimen(potential, poses)\n",
     "\n",
     "# ... and finally the instrument\n",
-    "optics = cs.WeakPhaseOptics()\n",
-    "instrument = cs.Instrument(optics=optics)"
+    "optics = cs.WeakPhaseOptics(ctf=cs.CTF())\n",
+    "instrument = cs.Instrument(optics)"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "@jax.jit\n",
     "def compute_stack_and_sum(vmap, novmap):\n",
     "    \"\"\"Compute the stack and sum.\"\"\"\n",
-    "    return jnp.sum(compute_image_stack(vmap, novmap), axis=0)\n",
+    "    return jnp.mean(compute_image_stack(vmap, novmap), axis=0)\n",
     "\n",
     "\n",
     "@jax.jit\n",
