convert between mrcfile and cryojax xyz conventions. utilities for writing mrcs

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -121,7 +121,7 @@
     ")\n",
     "# ... make sure subunit sits in box at +z direction\n",
     "subunit_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
-    "    jnp.transpose(subunit_real_voxel_grid, axes=[2, 1, 0]),\n",
+    "    subunit_real_voxel_grid,\n",
     "    subunit_voxel_size,\n",
     "    pad_scale=1.5,\n",
     ")\n",
@@ -130,7 +130,7 @@
     "    assembly_filename\n",
     ")\n",
     "assembly_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
-    "    jnp.transpose(assembly_real_voxel_grid, axes=[2, 1, 0]),\n",
+    "    assembly_real_voxel_grid,\n",
     "    assembly_voxel_size,\n",
     "    pad_scale=1.2,\n",
     ")\n",
