--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -204,7 +204,11 @@
    "outputs": [],
    "source": [
     "# Now, create an instrument\n",
-    "ctf = cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
+    "ctf = cs.CTF(\n",
+    "    defocus_u_in_angstroms=10000.0,\n",
+    "    defocus_v_in_angstroms=10000.0,\n",
+    "    amplitude_contrast_ratio=0.07,\n",
+    ")\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
     "dose = cs.ElectronDose(electrons_per_angstrom_squared=100.0)\n",
     "detector = cs.GaussianDetector(dqe=cs.IdealDQE(fraction_detected_electrons=1.0))\n",
