--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -128,7 +128,11 @@
     "# Initialize the instrument\n",
     "dose = cs.ElectronDose(electrons_per_angstrom_squared=100.0)\n",
     "optics = cs.WeakPhaseOptics(\n",
-    "    ctf=cs.CTF(defocus_u=10000.0, defocus_v=10000.0, amplitude_contrast_ratio=0.07)\n",
+    "    ctf=cs.CTF(\n",
+    "        defocus_u_in_angstroms=10000.0,\n",
+    "        defocus_v_in_angstroms=10000.0,\n",
+    "        amplitude_contrast_ratio=0.07,\n",
+    "    )\n",
     ")\n",
     "detector = cs.PoissonDetector(dqe=cs.IdealDQE(fraction_detected_electrons=1.0))\n",
     "instrument_with_optics = cs.Instrument(optics)\n",
