axis-angle is the same as what robotics people call exponential coordinates... just use jaxlie exp and logg with axis-angle

--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -134,12 +134,12 @@
     "    assembly_voxel_size,\n",
     "    pad_scale=1.2,\n",
     ")\n",
-    "pose = cs.EulerPose(\n",
+    "pose = cs.EulerAnglePose(\n",
     "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
     ")\n",
     "\n",
     "# Initialize the Specimen\n",
-    "initial_subunit = cs.Specimen(subunit_potential, cs.EulerPose(*r_0))\n",
+    "initial_subunit = cs.Specimen(subunit_potential, cs.EulerAnglePose(*r_0))\n",
     "true_assembly = cs.Specimen(assembly_potential, pose)\n",
     "\n",
     "# Initialize the Helix\n",
