--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -84,7 +84,7 @@
     "potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
-    "pose = cs.EulerPose(\n",
+    "pose = cs.EulerAnglePose(\n",
     "    offset_x=-2.0, offset_y=5.0, view_phi=20.0, view_theta=80.0, view_psi=-10.0\n",
     ")\n",
     "specimen = cs.Specimen(potential, pose)"
