--- a/tutorials/simulate-helix.ipynb
+++ b/tutorials/simulate-helix.ipynb
@@ -135,7 +135,11 @@
     "    pad_scale=1.2,\n",
     ")\n",
     "pose = cs.EulerAnglePose(\n",
-    "    offset_x=0.0, offset_y=0.0, view_phi=0.0, view_theta=0.0, view_psi=0.0\n",
+    "    offset_x_in_angstroms=0.0,\n",
+    "    offset_y_in_angstroms=0.0,\n",
+    "    view_phi=0.0,\n",
+    "    view_theta=0.0,\n",
+    "    view_psi=0.0,\n",
     ")\n",
     "\n",
     "# Initialize the Specimen\n",
