--- a/tutorials/simulate-image.ipynb
+++ b/tutorials/simulate-image.ipynb
@@ -85,7 +85,11 @@
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
     "pose = cs.EulerAnglePose(\n",
-    "    offset_x=-2.0, offset_y=5.0, view_phi=20.0, view_theta=80.0, view_psi=-10.0\n",
+    "    offset_x_in_angstroms=-2.0,\n",
+    "    offset_y_in_angstroms=5.0,\n",
+    "    view_phi=20.0,\n",
+    "    view_theta=80.0,\n",
+    "    view_psi=-10.0,\n",
     ")\n",
     "specimen = cs.Specimen(potential, pose)"
    ]
