potentials should be named potentials

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "# Read template into either an ElectronCloud or ElectronGrid\n",
     "real_voxel_grid, voxel_size = read_volume_with_voxel_size_from_mrc(filename)\n",
-    "potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
     "pose = cs.EulerAnglePose(\n",
