--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -128,7 +128,7 @@
     "filename = \"../../tests/data/3j9g_potential_ps4_4.mrc\"\n",
     "real_voxel_grid, voxel_size = read_volume_with_voxel_size_from_mrc(filename)\n",
     "config = cs.ImageConfig(shape, pixel_size, pad_scale=2.0)\n",
-    "potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2.0\n",
     ")\n",
     "integrator = cs.FourierSliceExtract(config)\n",
