drop jaxlie, sadly. great pafckage but need better control of some things

--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -8,9 +8,7 @@
     "\n",
     "This is a bit more of an advanced tutorial because it will demonstrate how to combine `equinox` and `jax.vmap` to compute a superposition of images of the same particle at random poses. The main functions of interest from `equinox` are `equinox.partition` and `equinox.combine`. Read about them more [here](https://docs.kidger.site/equinox/api/manipulation/#equinox.partition).\n",
     "\n",
-    "We will also demonstrate how to use `jaxlie`, which is the `cryojax` engine for computing and parameterizing rotations.\n",
-    "\n",
-    "This is not necessarily a good model of a micrograph, so this is why we put micrograph in quotations. Mostly, this is a tutorial for `equinox` and `jaxlie`!"
+    "This is not necessarily a good model of a micrograph, so this is why we put micrograph in quotations. Mostly, this is a tutorial for `equinox`!"
    ]
   },
   {
@@ -25,7 +23,6 @@
     "import jax.numpy as jnp\n",
     "import numpy as np\n",
     "from jax import config\n",
-    "from jaxlie import SO3\n",
     "from functools import partial\n",
     "\n",
     "config.update(\"jax_enable_x64\", False)"
@@ -60,6 +57,7 @@
    "source": [
     "# CryoJAX imports\n",
     "import cryojax.simulator as cs\n",
+    "from cryojax.rotations import SO3\n",
     "from cryojax.io import read_volume_with_voxel_size_from_mrc"
    ]
   },
@@ -80,9 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will sample different poses of our particle. To do this, we will use the [`jaxlie.SO3.sample_uniform`](https://brentyi.github.io/jaxlie/api/jaxlie/#jaxlie.SO3.sample_uniform) method. The `jaxlie.SO3` object is heavily used in `cryojax`. In fact, accessing an `AbstractPose.rotation` property will return a `jaxlie.SO3` object.\n",
+    "First, we will sample different poses of our particle. To do this, we will use the `SO3.sample_uniform` method. The `SO3` object is heavily used in `cryojax`. In fact, accessing an `AbstractPose.rotation` property will return a `SO3` object.\n",
     "\n",
-    "The most important detail when creating a group of `jaxlie.SO3` objects below is the `jax.vmap` transformation to `jaxlie.SO3.sample_uniform`. Think of it like this: `SO3.sample_uniform` is typed to construct a single `SO3` instance. If we want to construct many `SO3` instances, we can wrap this constructor in a `vmap` transformation.\n",
+    "The most important detail when creating a group of `SO3` objects below is the `jax.vmap` transformation to `SO3.sample_uniform`. Think of it like this: `SO3.sample_uniform` is typed to construct a single `SO3` instance. If we want to construct many `SO3` instances, we can wrap this constructor in a `vmap` transformation.\n",
     "\n",
     "To learn about this more, read the section of the equinox documentation on [model ensembling](https://docs.kidger.site/equinox/tricks/#ensembling)."
    ]
@@ -137,7 +135,9 @@
     "specimen = cs.Specimen(potential, poses)\n",
     "\n",
     "# ... and finally the instrument\n",
-    "optics = cs.WeakPhaseOptics(ctf=cs.CTF(defocus_u_in_angstroms=10000.0, defocus_v_in_angstroms=10000.0))\n",
+    "optics = cs.WeakPhaseOptics(\n",
+    "    ctf=cs.CTF(defocus_u_in_angstroms=10000.0, defocus_v_in_angstroms=10000.0)\n",
+    ")\n",
     "instrument = cs.Instrument(optics)"
    ]
   },
