frequency grid renaming to make clear they are wrapped in a Module

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "# Then, choose a model for the solvent scattering potential. The amplitude is the (squared) characteristic\n",
-    "# phase shift from the scattering potential, and the scale is the characteristic length scale of the potential.  \n",
+    "# phase shift from the scattering potential, and the scale is the characteristic length scale of the potential.\n",
     "solvent = cs.GaussianIce(\n",
     "    variance=op.Lorenzian(amplitude=0.002**2, scale=2.0 * config.pixel_size)\n",
     ")"
@@ -219,8 +219,18 @@
     "key = jax.random.PRNGKey(0)\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = plot_image(scattering_pipeline.sample(key), fig, ax1, label=\"Scattering potential at exit plane\")\n",
-    "im2 = plot_image(optics_pipeline.sample(key), fig, ax2, label=\"Squared wavefunction at detector plane\")\n",
+    "im1 = plot_image(\n",
+    "    scattering_pipeline.sample(key),\n",
+    "    fig,\n",
+    "    ax1,\n",
+    "    label=\"Scattering potential at exit plane\",\n",
+    ")\n",
+    "im2 = plot_image(\n",
+    "    optics_pipeline.sample(key),\n",
+    "    fig,\n",
+    "    ax2,\n",
+    "    label=\"Squared wavefunction at detector plane\",\n",
+    ")\n",
     "im3 = plot_image(detector_pipeline.sample(key), fig, ax3, label=\"Detector readout\")\n",
     "plt.tight_layout()"
    ]
@@ -259,8 +269,12 @@
     "key = jax.random.PRNGKey(0)\n",
     "fig, axes = plt.subplots(ncols=3, figsize=(12, 6))\n",
     "ax1, ax2, ax3 = axes\n",
-    "im1 = plot_image(scattering_pipeline.render(), fig, ax1, label=\"Scattering potential at exit plane\")\n",
-    "im2 = plot_image(optics_pipeline.render(), fig, ax2, label=\"Squared wavefunction at detector plane\")\n",
+    "im1 = plot_image(\n",
+    "    scattering_pipeline.render(), fig, ax1, label=\"Scattering potential at exit plane\"\n",
+    ")\n",
+    "im2 = plot_image(\n",
+    "    optics_pipeline.render(), fig, ax2, label=\"Squared wavefunction at detector plane\"\n",
+    ")\n",
     "im3 = plot_image(detector_pipeline.render(), fig, ax3, label=\"Expected electron counts\")\n",
     "plt.tight_layout()"
    ]
