updates to filtered transforms and get rid of stray filter_specs

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read template into either an ElectronCloud or ElectronGrid\n",
+    "# Read template into a FourierVoxelGridPotential and instantiate the Specimen\n",
     "real_voxel_grid, voxel_size = read_volume_with_voxel_size_from_mrc(filename)\n",
     "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
