--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we must read in our 3D scattering potential into a given voxel-based representation of the `potential`. Here, this is the `FourierVoxelGrid`. We will use this to instantiate the ``Specimen``, where we must also specify its `pose`. Here, we choose an `EulerAnglePose`."
+    "First we must read in our 3D scattering potential into a given voxel-based representation of the `potential`. Here, this is the `FourierVoxelGrid`. Then, we choose an integration method onto the exit plane.  Here, we use the fourier-slice projection theorem with the `FourierSliceExtract` integrator. In general, the `integrator` will depend on the scattering potential representation."
    ]
   },
   {
@@ -81,11 +81,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read template into a FourierVoxelGridPotential and instantiate the Specimen\n",
+    "# Read template into a FourierVoxelGridPotential and choose an integrator\n",
     "real_voxel_grid, voxel_size = read_volume_with_voxel_size_from_mrc(filename)\n",
     "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2\n",
     ")\n",
+    "integrator = cs.FourierSliceExtract(interpolation_order=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we must instantiate the biological specimen. A `Specimen` takes in the `potential`, `integrator`, and also a `pose`. Here, we represent the `pose` with an `EulerAnglePose`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the pose and build the specimen\n",
     "pose = cs.EulerAnglePose(\n",
     "    offset_x_in_angstroms=-2.0,\n",
     "    offset_y_in_angstroms=5.0,\n",
@@ -93,25 +110,7 @@
     "    view_theta=80.0,\n",
     "    view_psi=-10.0,\n",
     ")\n",
-    "specimen = cs.Specimen(potential, pose)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we have to configure the image we would like to simulate with the `ImageConfig` and choose an integration method onto the exit plane. The latter will depend on the scattering potential representation. Here, we use the fourier-slice projection theorem with the `FourierSliceExtract` integrator."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Configure the image and the integrator\n",
-    "config = cs.ImageConfig(shape=(65, 65), pixel_size=potential.voxel_size, pad_scale=1.5)\n",
-    "integrator = cs.FourierSliceExtract(config, interpolation_order=1)"
+    "specimen = cs.Specimen(potential, integrator, pose)"
    ]
   },
   {
@@ -145,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, choose a model for the solvent. Here, we model the ice as gaussian colored noise with `GaussianIce` and choose an analytical model for the power spectrum taken from the `cryojax.image.operators` module. Here, we choose the `Lorenzian`, whose abstract base class is an `AbstractFourierOperator`."
+    "Optionally, we can choose a model for the solvent. Here, we model the ice as gaussian colored noise with `GaussianIce` and choose an analytical model for the power spectrum taken from the `cryojax.image.operators` module. Here, we choose the `Lorenzian`, whose abstract base class is an `AbstractFourierOperator`."
    ]
   },
   {
@@ -165,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can initialize our `ImagePipeline`s. We would like to simulate images at each stage of the image formation process. This is controlled by the modeling complexity in the `Instrument`, which here has three levels.\n",
+    "Finally, we create an `ImageConfig` and initialize our `ImagePipeline`. In this example, we would like to simulate images at each stage of the image formation process. This is controlled by the modeling complexity in the `Instrument`, which here has three levels.\n",
     "\n",
     "**1. If there is no `Instrument`:** In this case, the returned \"image\" is the scattering potential in the exit plane.\n",
     "\n",
@@ -180,18 +179,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Image formation models\n",
+    "# Create the image configuration\n",
+    "config = cs.ImageConfig(shape=(65, 65), pixel_size=potential.voxel_size, pad_scale=1.5)\n",
+    "# ... now, build the image formation models\n",
     "scattering_pipeline = cs.ImagePipeline(\n",
-    "    integrator=integrator, specimen=specimen, solvent=solvent\n",
+    "    config=config, specimen=specimen, solvent=solvent\n",
     ")\n",
     "optics_pipeline = cs.ImagePipeline(\n",
-    "    integrator=integrator,\n",
+    "    config=config,\n",
     "    specimen=specimen,\n",
     "    instrument=instrument_with_optics,\n",
     "    solvent=solvent,\n",
     ")\n",
     "detector_pipeline = cs.ImagePipeline(\n",
-    "    integrator=integrator,\n",
+    "    config=config,\n",
     "    specimen=specimen,\n",
     "    instrument=instrument_with_optics_and_detector,\n",
     "    solvent=solvent,\n",
