--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,20 +125,19 @@
     "# ... load the scattering potential and projection method\n",
     "filename = \"../../tests/data/3j9g_potential_ps4_4.mrc\"\n",
     "real_voxel_grid, voxel_size = read_volume_with_voxel_size_from_mrc(filename)\n",
-    "config = cs.ImageConfig(shape, pixel_size, pad_scale=2.0)\n",
     "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=2.0\n",
     ")\n",
-    "integrator = cs.FourierSliceExtract(config)\n",
+    "integrator = cs.FourierSliceExtract(interpolation_order=1)\n",
     "\n",
-    "# ... build the specimen\n",
-    "specimen = cs.Specimen(potential, poses)\n",
-    "\n",
-    "# ... and finally the instrument\n",
+    "# ... and the instrument\n",
     "optics = cs.WeakPhaseOptics(\n",
     "    ctf=cs.CTF(defocus_u_in_angstroms=10000.0, defocus_v_in_angstroms=10000.0)\n",
     ")\n",
-    "instrument = cs.Instrument(optics)"
+    "instrument = cs.Instrument(optics)\n",
+    "\n",
+    "# and finally the config\n",
+    "config = cs.ImageConfig(shape, pixel_size, pad_scale=2.0)"
    ]
   },
   {
@@ -169,10 +168,11 @@
     "    return jnp.mean(compute_image_stack(vmap, novmap), axis=0)\n",
     "\n",
     "\n",
-    "@jax.jit\n",
-    "def compute_micrograph(specimen, integrator, instrument):\n",
+    "@partial(jax.vmap, in_axes=[0, None, None, None, None])\n",
+    "def compute_micrograph(pose, config, potential, integrator, instrument):\n",
     "    \"\"\"Build the model and compute the superposition.\"\"\"\n",
-    "    pipeline = cs.ImagePipeline(specimen, integrator, instrument)\n",
+    "    specimen = cs.Specimen(potential, integrator, pose)\n",
+    "    pipeline = cs.ImagePipeline(config, specimen, instrument)\n",
     "    is_vmap = lambda x: isinstance(x, cs.AbstractPose)\n",
     "    to_vmap = jax.tree_util.tree_map(is_vmap, pipeline, is_leaf=is_vmap)\n",
     "    vmap, novmap = eqx.partition(pipeline, to_vmap)\n",
@@ -209,7 +209,7 @@
    "source": [
     "# Compute the image and plot\n",
     "fig, ax = plt.subplots(figsize=(5.5, 5.5))\n",
-    "micrograph = compute_micrograph(specimen, integrator, instrument)\n",
+    "micrograph = compute_micrograph(poses, config, potential, integrator, instrument)\n",
     "plot_image(micrograph, fig, ax, label=\"Sum of random poses\", interpolation=None)"
    ]
   }
