stray print statement

--- a/docs/examples/simulate-helix.ipynb
+++ b/docs/examples/simulate-helix.ipynb
@@ -88,8 +88,8 @@
    "outputs": [],
    "source": [
     "# Volume filename and metadata\n",
-    "subunit_filename = \"../tests/data/3j9g_subunit_bfm1_ps4_4.mrc\"\n",
-    "assembly_filename = \"../tests/data/3j9g_bfm1_ps4_4.mrc\""
+    "subunit_filename = \"../../tests/data/3j9g_subunit_potential_ps4_4.mrc\"\n",
+    "assembly_filename = \"../../tests/data/3j9g_potential_ps4_4.mrc\""
    ]
   },
   {
@@ -120,7 +120,7 @@
     "    subunit_filename\n",
     ")\n",
     "# ... make sure subunit sits in box at +z direction\n",
-    "subunit_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "subunit_potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    subunit_real_voxel_grid,\n",
     "    subunit_voxel_size,\n",
     "    pad_scale=1.5,\n",
@@ -129,7 +129,7 @@
     "assembly_real_voxel_grid, assembly_voxel_size = read_volume_with_voxel_size_from_mrc(\n",
     "    assembly_filename\n",
     ")\n",
-    "assembly_potential = cs.FourierVoxelGrid.from_real_voxel_grid(\n",
+    "assembly_potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    assembly_real_voxel_grid,\n",
     "    assembly_voxel_size,\n",
     "    pad_scale=1.2,\n",
@@ -143,8 +143,9 @@
     ")\n",
     "\n",
     "# Initialize the Specimen\n",
-    "initial_subunit = cs.Specimen(subunit_potential, cs.EulerAnglePose(*r_0))\n",
-    "true_assembly = cs.Specimen(assembly_potential, pose)\n",
+    "integrator = cs.FourierSliceExtract()\n",
+    "initial_subunit = cs.Specimen(subunit_potential, integrator, cs.EulerAnglePose(*r_0))\n",
+    "true_assembly = cs.Specimen(assembly_potential, integrator, pose)\n",
     "\n",
     "# Initialize the Helix\n",
     "helix = cs.Helix(\n",
@@ -164,7 +165,7 @@
    "outputs": [],
    "source": [
     "# View the helical net\n",
-    "lattice = helix.positions\n",
+    "lattice = helix.offsets_in_angstroms\n",
     "theta, z = jnp.arctan2(lattice[:, 1], lattice[:, 0]), lattice[:, 2]\n",
     "plot_net(theta, z)"
    ]
@@ -179,11 +180,10 @@
     "shape = (80, 80)\n",
     "pixel_size = assembly_potential.voxel_size\n",
     "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.4)\n",
-    "integrator = cs.FourierSliceExtract(config)\n",
     "\n",
     "# ... instantiate the image formation models\n",
-    "simulated = cs.AssemblyPipeline(helix, integrator)\n",
-    "truth = cs.ImagePipeline(true_assembly, integrator)"
+    "simulated = cs.AssemblyPipeline(config, helix)\n",
+    "truth = cs.ImagePipeline(config, true_assembly)"
    ]
   },
   {
@@ -214,12 +214,12 @@
     "    amplitude_contrast_ratio=0.07,\n",
     ")\n",
     "optics = cs.WeakPhaseOptics(ctf)\n",
-    "dose = cs.ElectronDose(electrons_per_angstrom_squared=100.0)\n",
+    "dose = cs.ElectronDose(electrons_per_angstrom_squared=1000.0)\n",
     "detector = cs.GaussianDetector(dqe=cs.IdealDQE(fraction_detected_electrons=1.0))\n",
     "instrument = cs.Instrument(optics, dose, detector)\n",
     "# ... and their respective pipelines\n",
-    "simulated = cs.AssemblyPipeline(helix, integrator, instrument)\n",
-    "truth = cs.ImagePipeline(true_assembly, integrator, instrument)"
+    "simulated = cs.AssemblyPipeline(config, helix, instrument)\n",
+    "truth = cs.ImagePipeline(config, true_assembly, instrument)"
    ]
   },
   {
@@ -243,7 +243,7 @@
   "kernelspec": {
    "display_name": "cryojax",
    "language": "python",
-   "name": "cryojax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
