--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -192,6 +192,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import equinox as eqx\n",
+    "\n",
+    "\n",
     "@partial(cjc.filter_vmap_with_spec, filter_spec=filter_spec)\n",
     "def compute_image_stack(pipeline):\n",
     "    \"\"\"Compute a batch of images at different poses,\n",
@@ -200,7 +203,7 @@
     "    return pipeline.render()\n",
     "\n",
     "\n",
-    "@jax.jit\n",
+    "@eqx.filter_jit\n",
     "def compute_micrograph(pipeline):\n",
     "    \"\"\"Sum together the image stack.\"\"\"\n",
     "    return jnp.mean(compute_image_stack(pipeline), axis=0)"
@@ -256,7 +259,7 @@
   "kernelspec": {
    "display_name": "cryojax",
    "language": "python",
-   "name": "python3"
+   "name": "cryojax"
   },
   "language_info": {
    "codemirror_mode": {
@@ -268,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
