need to change type hinting pattern to allow for vmapping over arbitrary pytree leaves. need __init__s to also support arrays with batch dimensions

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, it's time to configure the imaging instrument. We can include models for the instrument optics, the electron dose, and the detector. Here, we create an instrument just with an optics model and also with a detector model. We will see in a few lines why we have done this."
+    "Now, it's time to configure the imaging instrument. We can include models for the instrument optics, the electron dose, and the detector. Here, we create an instrument just with an optics model, and one that also includes a a detector model. We will see in a few lines why we have done this."
    ]
   },
   {
