--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "In this tutorial, we will simulate a naive model of a micrograph. In particular, we will simulate a batch of images of the same particle at random poses, then sum over them.\n",
     "\n",
-    "The goal of this tutorial is to learn how to vmap in `cryojax`'s recommended pattern. First, we will demonstrate this pattern using utilities in `cryojax.core`. These utilities are lightweight wrappers around `equinox`. We will then simulate the same image using native `equinox`, which is highly recommended learning."
+    "The goal of this tutorial is to learn how to vmap in `cryojax`'s recommended pattern. Namely, we will demonstrate this pattern using utilities in `cryojax.core`. These utilities are lightweight wrappers around `equinox`."
    ]
   },
   {
