--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -289,19 +289,33 @@
    "source": [
     "from cryojax.image import rfftn\n",
     "\n",
-    "# Get the particle \n",
+    "# Get the particle\n",
     "relion_particle = dataset[0]\n",
     "# ... and the image in fourier space\n",
     "fourier_image = rfftn(relion_particle.image_stack)\n",
     "# ... and the cartesian coordinate system\n",
     "pixel_size = relion_particle.config.pixel_size\n",
-    "frequency_grid_in_angstroms = relion_particle.config.wrapped_frequency_grid_in_angstroms.get()\n",
+    "frequency_grid_in_angstroms = (\n",
+    "    relion_particle.config.wrapped_frequency_grid_in_angstroms.get()\n",
+    ")\n",
     "# ... now, compute a radial coordinate system\n",
-    "radial_frequency_grid_in_angstroms = jnp.linalg.norm(frequency_grid_in_angstroms, axis=-1)\n",
+    "radial_frequency_grid_in_angstroms = jnp.linalg.norm(\n",
+    "    frequency_grid_in_angstroms, axis=-1\n",
+    ")\n",
     "# ... plot the image in fourier space and the radial frequency grid\n",
     "fig, axes = plt.subplots(figsize=(5, 4), ncols=2)\n",
-    "plot_image(jnp.log(jnp.abs(jnp.fft.fftshift(fourier_image, axes=(0,)))**2), fig, axes[0], label=\"Image log power spectrum\")\n",
-    "plot_image(jnp.fft.fftshift(radial_frequency_grid_in_angstroms * pixel_size, axes=(0,)), fig, axes[1], label=\"Radial frequency grid\")\n",
+    "plot_image(\n",
+    "    jnp.log(jnp.abs(jnp.fft.fftshift(fourier_image, axes=(0,))) ** 2),\n",
+    "    fig,\n",
+    "    axes[0],\n",
+    "    label=\"Image log power spectrum\",\n",
+    ")\n",
+    "plot_image(\n",
+    "    jnp.fft.fftshift(radial_frequency_grid_in_angstroms * pixel_size, axes=(0,)),\n",
+    "    fig,\n",
+    "    axes[1],\n",
+    "    label=\"Radial frequency grid\",\n",
+    ")\n",
     "plt.tight_layout()"
    ]
   },
@@ -344,7 +358,12 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "N_pixels = math.prod(relion_particle.config.shape)\n",
-    "spectrum, wavenumbers = powerspectrum(fourier_image, radial_frequency_grid_in_angstroms, pixel_size, k_max=1/(2*pixel_size))\n",
+    "spectrum, wavenumbers = powerspectrum(\n",
+    "    fourier_image,\n",
+    "    radial_frequency_grid_in_angstroms,\n",
+    "    pixel_size,\n",
+    "    k_max=1 / (2 * pixel_size),\n",
+    ")\n",
     "ax.plot(pixel_size * wavenumbers, spectrum / N_pixels, color=\"k\")\n",
     "ax.set(xlabel=\"wavenumber\", ylabel=\"power spectrum\", yscale=\"log\")"
    ]
@@ -357,7 +376,9 @@
    "source": [
     "from cryojax.io import write_image_stack_to_mrc\n",
     "\n",
-    "write_image_stack_to_mrc(dataset[:4].image_stack[:, ::4, ::4], pixel_size*4, \"example_image_stack.mrcs\")"
+    "write_image_stack_to_mrc(\n",
+    "    dataset[:4].image_stack[:, ::4, ::4], pixel_size * 4, \"example_image_stack.mrcs\"\n",
+    ")"
    ]
   },
   {
