--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we will read in the RELION particle stack using the `cryojax` dataset reader `RelionDataset`.\n",
+    "First, we will read in the RELION particle stack using the `cryojax` particle stack loader `RelionDataset`.\n",
     "\n",
     "!!! info \"What is a `RelionDataset`?\"\n",
     "\n",
