formatting and fixed README

--- a/docs/examples/read-dataset.ipynb
+++ b/docs/examples/read-dataset.ipynb
@@ -366,7 +366,11 @@
     "    k_max=1 / (2 * pixel_size),\n",
     ")\n",
     "ax.plot(wavenumbers, spectrum / N_pixels, color=\"k\")\n",
-    "ax.set(xlabel=\"wavenumber $[\\AA^{-1}]$\", ylabel=\"radially averaged power spectrum\", yscale=\"log\")"
+    "ax.set(\n",
+    "    xlabel=\"wavenumber $[\\AA^{-1}]$\",\n",
+    "    ylabel=\"radially averaged power spectrum\",\n",
+    "    yscale=\"log\",\n",
+    ")"
    ]
   },
   {
