move examples over to using ribosome data

--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -55,18 +55,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Configure the image parameters\n",
-    "shape = (400, 600)\n",
-    "pixel_size = 4.4  # Angstroms\n",
-    "image_size = np.asarray(shape) * pixel_size"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,7 +68,7 @@
    "outputs": [],
    "source": [
     "# First, load the scattering potential and projection method\n",
-    "filename = \"../../tests/data/3j9g_potential_ps4_4.mrc\"\n",
+    "filename = \"./data/ribosome_4ug0_scattering_potential_from_cistem.mrc\"\n",
     "real_voxel_grid, voxel_size = read_array_with_spacing_from_mrc(filename)\n",
     "potential = cs.FourierVoxelGridPotential.from_real_voxel_grid(\n",
     "    real_voxel_grid, voxel_size, pad_scale=1.5\n",
@@ -89,11 +77,14 @@
     "\n",
     "# ... and build the instrument\n",
     "optics = cs.WeakPhaseOptics(\n",
-    "    ctf=cs.CTF(defocus_u_in_angstroms=10000.0, defocus_v_in_angstroms=10000.0)\n",
+    "    ctf=cs.CTF(defocus_u_in_angstroms=10000.0, defocus_v_in_angstroms=10000.0, voltage_in_kilovolts=300.0)\n",
     ")\n",
     "instrument = cs.Instrument(optics)\n",
     "\n",
     "# ... and finally the config\n",
+    "shape = (400, 600)\n",
+    "pixel_size = potential.voxel_size  # Angstroms\n",
+    "image_size = np.asarray(shape) * pixel_size\n",
     "config = cs.ImageConfig(shape, pixel_size, pad_scale=1.5)"
    ]
   },
