--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -175,7 +175,9 @@
    "outputs": [],
    "source": [
     "# Create the image configuration\n",
-    "config = cs.ImageConfig(shape=(80, 80), pixel_size=potential.voxel_size, padded_shape=potential.shape[:2])\n",
+    "config = cs.ImageConfig(\n",
+    "    shape=(80, 80), pixel_size=potential.voxel_size, padded_shape=potential.shape[:2]\n",
+    ")\n",
     "# ... now, build the image formation models\n",
     "scattering_pipeline = cs.ImagePipeline(\n",
     "    config=config, specimen=specimen, solvent=solvent\n",
