--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -77,7 +77,11 @@
     "\n",
     "# ... and build the instrument\n",
     "optics = cs.WeakPhaseOptics(\n",
-    "    ctf=cs.CTF(defocus_u_in_angstroms=10000.0, defocus_v_in_angstroms=10000.0, voltage_in_kilovolts=300.0)\n",
+    "    ctf=cs.CTF(\n",
+    "        defocus_u_in_angstroms=10000.0,\n",
+    "        defocus_v_in_angstroms=10000.0,\n",
+    "        voltage_in_kilovolts=300.0,\n",
+    "    )\n",
     ")\n",
     "instrument = cs.Instrument(optics)\n",
     "\n",
@@ -232,7 +236,13 @@
     "# Compute the image and plot\n",
     "fig, ax = plt.subplots(figsize=(5.5, 5.5))\n",
     "micrograph = compute_micrograph(pipeline)\n",
-    "plot_image(micrograph, fig, ax, label=\"Image contrast for a sum of random poses\", interpolation=None)"
+    "plot_image(\n",
+    "    micrograph,\n",
+    "    fig,\n",
+    "    ax,\n",
+    "    label=\"Image contrast for a sum of random poses\",\n",
+    "    interpolation=None,\n",
+    ")"
    ]
   },
   {
