switch linting to ruff and fix emergent errors

--- a/docs/examples/simulate-image.ipynb
+++ b/docs/examples/simulate-image.ipynb
@@ -148,8 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Then, choose a model for the solvent scattering potential. The amplitude is the (squared) characteristic\n",
-    "# phase shift from the scattering potential, and the scale is the characteristic length scale of the potential.\n",
+    "# Then, choose a model for the solvent scattering potential. The amplitude is the\n",
+    "# (squared) characteristic phase shift from the scattering potential, and the scale is\n",
+    "# the characteristic length scale of the potential.\n",
     "solvent = cs.GaussianIce(\n",
     "    variance=op.Lorenzian(amplitude=0.005**2, length_scale=2.0 * potential.voxel_size)\n",
     ")"
@@ -209,8 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jaxtyping import PRNGKeyArray\n",
     "import equinox as eqx\n",
+    "from jaxtyping import PRNGKeyArray\n",
     "\n",
     "\n",
     "@eqx.filter_jit\n",
