--- a/docs/examples/simulate-micrograph.ipynb
+++ b/docs/examples/simulate-micrograph.ipynb
@@ -50,8 +50,8 @@
    "source": [
     "# CryoJAX imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.rotations import SO3\n",
-    "from cryojax.io import read_array_with_spacing_from_mrc"
+    "from cryojax.io import read_array_with_spacing_from_mrc\n",
+    "from cryojax.rotations import SO3"
    ]
   },
   {
@@ -105,8 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jaxtyping import PRNGKeyArray\n",
     "from functools import partial\n",
+    "\n",
+    "from jaxtyping import PRNGKeyArray\n",
     "\n",
     "\n",
     "@partial(jax.vmap, in_axes=[0, None])\n",
@@ -123,7 +124,8 @@
     "        * jnp.asarray((nx, ny))\n",
     "        * config.pixel_size\n",
     "    )\n",
-    "    # ... convert 2D in-plane translation to 3D, setting the out-of-plane translation to zero\n",
+    "    # ... convert 2D in-plane translation to 3D, setting the out-of-plane translation to\n",
+    "    # zero\n",
     "    offset_in_angstroms = jnp.pad(in_plane_offset_in_angstroms, ((0, 1),))\n",
     "    # Build the pose and return\n",
     "    return cs.QuaternionPose.from_rotation_and_translation(\n",
@@ -165,6 +167,7 @@
    "outputs": [],
    "source": [
     "import cryojax.core as cjc\n",
+    "\n",
     "\n",
     "# ... specify which leaves we would like to vmap over\n",
     "where = lambda pipeline: pipeline.specimen.pose\n",
