--- a/docs/examples/test-multiatom.ipynb
+++ b/docs/examples/test-multiatom.ipynb
@@ -20,14 +20,12 @@
     "import equinox as eqx\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "import numpy as np\n",
     "from jax import config\n",
     "\n",
+    "\n",
     "config.update(\"jax_enable_x64\", False)\n",
-    "from cryojax.simulator.scattering._gaussian_mixture import _evaluate_coord_to_grid_sq_distances\n",
-    "from cryojax.simulator.scattering import _build_pixel_grid, IndependentAtomScattering\n",
     "from cryojax.simulator.density import AtomCloud\n",
-    "\n"
+    "from cryojax.simulator.scattering import IndependentAtomScattering"
    ]
   },
   {
@@ -63,7 +61,7 @@
    "source": [
     "# Image simulator imports\n",
     "import cryojax.simulator as cs\n",
-    "from cryojax.utils import fftn, irfftn, fftfreqs"
+    "from cryojax.utils import fftfreqs, fftn, irfftn"
    ]
   },
   {
